--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>Math Ninja</title>
   </head>
   <body>
     <div id="root"></div>
